# water-inflow-forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: PROBLEM.md  features_all.csv  features_clean.csv  multistep_regression.csv
figures/: fe_comparison_metrics.json
models/: forecaster.pkl
notebooks/: 01_EDA_and_Feature_Engineering.ipynb  02_Model_Development.ipynb  03_Feature_Engineering_Impact.ipynb
src/: feature_engineering_comparison.py  lstm_trainer.py  water_inflow_forecaster.py
src/utils/: logger.py
