[project]
name = "water-inflow-forecasting"
version = "1.0.0"
description = "Hydroelectric power plant water inflow forecasting with ensemble ML models"
requires-python = ">=3.12"

[tool.ruff]
# Target Python version
target-version = "py312"

# Line length
line-length = 100

# Only lint src/ directory
src = ["src"]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "*.egg-info",
    "build",
    "dist",
    "data",
    "figures",
    "logs",
    "models",
    "reports",
    "notebooks",
]

[tool.ruff.lint]
# Enable all rules, then selectively ignore
select = ["ALL"]

# Ignore specific rules
ignore = [
    # ── Docstrings (not enforced in ML/data science scripts) ──
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # Incompatible with D211 (no-blank-line-before-class)
    "D205",    # 1 blank line required between summary and description
    "D213",    # Incompatible with D212 (multi-line-summary-first-line)
    "D400",    # First line should end with a period
    "D401",    # First line should be in imperative mood
    "D415",    # First line should end with punctuation
    "D417",    # Missing argument descriptions in docstring

    # ── Type annotations (not typical in ML/data science code) ──
    "ANN",     # flake8-annotations (all)

    # ── Print & assert (common in scripts/training) ──
    "T201",    # print() usage — intentional in training scripts
    "S101",    # assert usage — common in data validation

    # ── ML/data science patterns ──
    "N803",    # Argument name should be lowercase — ML uses X, X_train etc.
    "N806",    # Variable name should be lowercase — ML uses X, Y etc.
    "PLR2004", # Magic value in comparison — hyperparameters, thresholds
    "PLR0913", # Too many arguments — common in ML function signatures
    "PLR0915", # Too many statements — complex ML pipelines
    "FBT",     # Boolean positional/default — common in ML config params
    "ERA001",  # Commented-out code — experimentation remnants
    "PD011",   # .values usage — idiomatic in pandas/ML code
    "PD002",   # inplace argument — common pandas pattern
    "NPY002",  # Legacy np.random.seed — standard for reproducibility
    "ICN001",  # Unconventional import alias — matplotlib as mpl not enforced

    # ── Exception handling ──
    "BLE001",  # Do not catch blind exception: Exception
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # Consider moving this statement to an `else` block
    "TRY301",  # Abstract `raise` to an inner function
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
    "S112",    # try-except-continue — used in model search loops
    "S301",    # pickle usage — needed for model serialization

    # ── Formatter compatibility ──
    "COM812",  # Trailing comma — conflicts with ruff formatter

    # ── Pathlib enforcement (os.path is fine for scripts) ──
    "PTH",     # flake8-use-pathlib (all) — os.path is acceptable

    # ── Project-specific ──
    "INP001",  # Implicit namespace package — src/ scripts without __init__.py
    "RUF001",  # Ambiguous unicode character (Turkish characters)
    "RUF012",  # Mutable class default — config dataclasses
    "S603",    # subprocess call — used for LSTM trainer subprocess
    "S607",    # Starting a process with a partial executable path
    "E402",    # Module import not at top — matplotlib backend must be set first
    "DTZ005",  # datetime.now() without tz — log timestamps don't need tz
    "SLF001",  # Private member access — accessing own class internals
    "ARG002",  # Unused method argument — method signature compatibility
    "RET504",  # Unnecessary assignment before return — readability
    "B905",    # zip-without-explicit-strict — same-length arrays in ML
    "PLC0415", # Import outside top level — conditional/deferred imports
    "SIM102",  # Collapsible if — nested ifs can be more readable
    "RUF059",  # Unused unpacked variable
]

# Allow all fixable rules
fixable = ["ALL"]

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# __init__.py files commonly have unused imports
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["utils"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
# Format docstring code blocks
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
